--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.first.web</groupId>
   <artifactId>MAVENWEBPROJECT</artifactId>
   <packaging>war</packaging>
-  <version>0.0.10-SNAPSHOT</version>
+  <version>0.0.10</version>
   <name>MAVENWEBPROJECT Maven Webapp</name>
   <url>http://maven.apache.org</url>
       <scm>
